# lite

./: .gitignore  CMakeLists.txt
data/plugins/: language_sh.lua
data/user/: init.lua
data/user/colors/: javi.lua
src/api/: system.c
